changed toList to Collector, and getLong to getInt